--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="index.css">
-    <link rel="icon" type="image/png" href="/imagens/favicon.png">
+    <link rel="icon" type="image/png" href="./imagens/favicon.png">
 
     <!--Fonts-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -24,7 +24,7 @@
         <div class="container">
           
           <a href="index.html" class="navbar-brand">
-            <img src="/imagens/spotify.svg" width="142">
+            <img src="./imagens/spotify.svg" width="142">
           </a>
 
           <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
@@ -120,19 +120,19 @@
 
             <div class="row albuns">
               <div class="col-md-6">
-                <img src="/imagens/img1.jpg" class="img-fluid">
+                <img src="./imagens/img1.jpg" class="img-fluid">
               </div>
               <div class="col-md-6">
-                <img src="/imagens/img2.jpg" class="img-fluid">
+                <img src="./imagens/img2.jpg" class="img-fluid">
               </div>
             </div>
 
             <div class="row albuns">
               <div class="col-md-6">
-                <img src="/imagens/img3.jpg" class="img-fluid">
+                <img src="./imagens/img3.jpg" class="img-fluid">
               </div>
               <div class="col-md-6">
-                <img src="/imagens/img4.jpg" class="img-fluid">
+                <img src="./imagens/img4.jpg" class="img-fluid">
               </div>
             </div>
 
@@ -181,11 +181,11 @@
             <div class="row rotacionar">
 
               <div class="col-md-6">
-                <img src="/imagens/iphone1.png" class="img-fluid">
+                <img src="./imagens/iphone1.png" class="img-fluid">
               </div>
 
               <div class="col-md-6">
-                <img src="/imagens/iphone2.png" class="img-fluid">
+                <img src="./imagens/iphone2.png" class="img-fluid">
               </div>
 
             </div>
@@ -202,7 +202,7 @@
         <div class="row">
 
           <div class="col-md-2">
-            <img src="/imagens/spotify.svg" width="142">
+            <img src="./imagens/spotify.svg" width="142">
           </div>
 
           <div class="col-md-2">
@@ -241,19 +241,19 @@
 
               <li>
                 <a href="">
-                  <img src="/imagens/facebook.png">
+                  <img src="./imagens/facebook.png">
                 </a>
               </li>
 
               <li>
                 <a href="">
-                  <img src="/imagens/twitter.png">
+                  <img src="./imagens/twitter.png">
                 </a>
               </li>
 
               <li>
                 <a href="">
-                  <img src="/imagens/instagram.png">
+                  <img src="./imagens/instagram.png">
                 </a>
               </li>
 
